--- a/templates/login.html
+++ b/templates/login.html
@@ -15,10 +15,46 @@
 <body>
 
      <!-- Navigation Bar -->
-     <nav class="navbar">
-        <div class="nav-container">
-            <ul class="nav-links">
-                <li><a href="/home">Home</a></li>
+     <style>
+     body {
+       margin: 0;
+       font-family: Arial, Helvetica, sans-serif;
+     }
+     
+     .topnav {
+       overflow: hidden;
+       background-color: #FFC0CB;
+     }
+     
+     .topnav a {
+       float: left;
+       color: #f2f2f2;
+       text-align: center;
+       padding: 14px 16px;
+       text-decoration: none;
+       font-size: 17px;
+     }
+     
+     .topnav a:hover {
+       background-color: #ddd;
+       color: black;
+     }
+     
+     .topnav a.active {
+       background-color: #04AA6D;
+       color: white;
+     }
+     </style>
+     </head>
+     <body>
+     
+     <div class="topnav">
+        <a href="/home">Home</a>
+       <a href="/search">Restaurants</a>
+       <a class="active" href="#login">Login</a>
+     </div>
+     
+     
 
     <!-- Login Form -->
     <form action="/login" method="POST">
