--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -8,11 +8,47 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar">
-        <a href="/Home">Home</a>
-        <a href="/login">Login</a>
-    </nav>
+         <!-- Navigation Bar -->
+            <style>
+            body {
+              margin: 0;
+              font-family: Arial, Helvetica, sans-serif;
+            }
+            
+            .topnav {
+              overflow: hidden;
+              background-color: #FFC0CB;
+            }
+            
+            .topnav a {
+              float: left;
+              color: #f2f2f2;
+              text-align: center;
+              padding: 14px 16px;
+              text-decoration: none;
+              font-size: 17px;
+            }
+            
+            .topnav a:hover {
+              background-color: #ddd;
+              color: black;
+            }
+            
+            .topnav a.active {
+              background-color: #04AA6D;
+              color: white;
+            }
+            </style>
+            </head>
+            <body>
+            
+            <div class="topnav">
+               <a href="/home">Home</a>
+               <a class="active" href="#search">Restaurants</a>
+               <a href="/login">Login</a>
+            </div>
 
+            
     <!-- Search Bar -->
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Search by cuisine or food type..." onkeyup="filterRestaurants()" />
