--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="/static/css/styles.css"> <!-- Link to the external CSS -->
 </head>
 <body>
-    <!-- Navigation Bar -->
+    !-- Navigation Bar -->
     <nav class="topnav">
         <a href="/home">Home</a>
-        <a href="/restaurants">Explore Restaurants</a>
-        <a href="/logout">Logout</a>
+        <a href="/restaurants">Restaurants</a>
+        <a href="/profile">Profile</a>
     </nav>
 
     <!-- Profile Card -->
