--- a/templates/home.html
+++ b/templates/home.html
@@ -9,11 +9,17 @@
 <body>
 
     <!-- Navigation Bar -->
-    <div class="topnav">
-        <a class="active" href="#home">Home</a>
+    <nav class="topnav">
+        <a href="/home">Home</a>
         <a href="/restaurants">Restaurants</a>
-        <a href="/login">Login</a>
-    </div>
+        {% if 'user_id' in session %}
+            <a href="/profile/{{ session['user_id'] }}">Profile</a>
+            <a href="/logout">Logout</a>
+        {% else %}
+            <a href="/login">Login</a>
+        {% endif %}
+    </nav>
+    
 
     <!-- Content Block (Home Page) -->
     <div class="home-page">
