--- a/templates/login.html
+++ b/templates/login.html
@@ -4,22 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/static/css/styles.css"> <!-- Link to the external CSS -->
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
-<body>
-
-    <!-- Navigation Bar -->
-    <nav class="topnav">
-        <a href="/home">Home</a>
-        <a href="/restaurants">Restaurants</a>
-        {% if 'user_id' in session %}
-            <a href="/profile/{{ session['user_id'] }}">Profile</a>
-            <a href="/logout">Logout</a>
-        {% else %}
-            <a href="/login">Login</a>
-        {% endif %}
-    </nav>
-    
 
     <!-- Login Form Container -->
     <div class="login-page">
@@ -36,16 +22,20 @@
                     <label>
                         <input type="checkbox"> Remember me
                     </label>
-                    <a href="#">Forgot password?</a>
+                    <a href="/forgotpassword">Forgot password?</a> <!--Link to Forgot Password-->
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn">Log In</button>
             </form>
             <div class="register-link">
                 <p>Don't have an account? <a href="/register">Register here</a></p>
             </div>
         </div>
     </div>
-
+</head>
+            <!-- Error Message Display -->
+            {% if error_message %}
+                <p class="error">{{ error_message }}</p>
+            {% endif %}
 </body>
 </html>
 
